WIP: snapshot broken hydrology and Minecraft adapter
This branch intentionally preserves the current experimental terrain, climate, erosion, river, lake, and chunk-coherence implementation. The version is known to be seriously broken in actual world generation and is not suitable for release or merging to main.